--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <ion-col size-sm="12" size-lg = "6"> <!--Inicia columna 2-->
                 columna 2
                 <input type="Escriba su entrada">
-                <button>Enviar</button>
+                <button>Enviar algo</button>
             </ion-col>
         </ion-row>
     </ion-grid>
