--- a/index.html
+++ b/index.html
@@ -14,21 +14,11 @@
     <title>Práctica 1</title>
 </head>
 <ion-app>
-    <h1>Este es un título</h1>
-    <h2>Este es otro</h2>
-    <h3>Este es el último</h3>
-    <ion-grid fixed=false> <!--Inicia grid-->
-        <ion-row> <!--Inicia fila 1-->
-            <ion-col size-sm="12" size-lg = "6"> <!--Inicia columna 1-->
-                columna 1
-                <ion-input placeholder="Escriba su entrada"></ion-input>
-                <ion-button>Enviar</ion-button>
-            </ion-col>
-            <ion-col size-sm="12" size-lg = "6"> <!--Inicia columna 2-->
-                columna 2
-                <input type="Escriba su entrada">
-                <button>Enviar algo</button>
-            </ion-col>
-        </ion-row>
-    </ion-grid>
+    <h1>Ionic Básico -- Práctica 2</h1>
+
+    <ion-tabs>
+        <ion-tab tab="inicio">
+            Inicio
+        </ion-tab>
+    </ion-tabs>
 </ion-app>
