--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
         <h1>Ionic Básico -- Práctica 2</h1>
 
         <ion-tabs>
+            <ion-tab tab="tab1">
+                <ion-content fullscreen class="ion-padding">
+                    <h1>Esta es la primera</h1>
+                </ion-content>
+            </ion-tab>
+
+            <ion-tab tab="tab2">
+                <ion-content fullscreen class="ion-padding">
+                    <h1>Esta es la segunda</h1>
+                </ion-content>
+            </ion-tab>
             <ion-tab-bar slot="bottom">
                 <ion-tab-button tab="tab1">
                     <ion-icon name="bug"></ion-icon>
