--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         <ion-tabs>
             <ion-tab tab="tab1">
                 <ion-content fullscreen class="ion-padding">
-                    <h1>Esta es la primera</h1>
+                    <h1 style="text-align: center">Esta es la primera</h1>
                 </ion-content>
             </ion-tab>
 
             <ion-tab tab="tab2">
                 <ion-content fullscreen class="ion-padding">
-                    <h1>Esta es la segunda</h1>
+                    <h1 style="display: block; border-style: dotted; width: 50vw">Esta es la segunda</h1>
                 </ion-content>
             </ion-tab>
             <ion-tab-bar slot="bottom">
