--- a/index.html
+++ b/index.html
@@ -15,30 +15,38 @@
 </head>
 <body>
     <ion-app>
-        <h1>Ionic Básico -- Práctica 2</h1>
 
         <ion-tabs>
+            <!--Tab 1-->
             <ion-tab tab="tab1">
                 <ion-content fullscreen class="ion-padding">
                     <h1 style="text-align: center">Esta es la primera</h1>
                 </ion-content>
             </ion-tab>
-
+            <!--Tab 2-->
             <ion-tab tab="tab2">
                 <ion-content fullscreen class="ion-padding">
                     <h1 style="display: block; border-style: dotted; width: 50vw">Esta es la segunda</h1>
                 </ion-content>
             </ion-tab>
+
+            <!--Barra de tabs-->
             <ion-tab-bar slot="bottom">
+                <!--Botón 1-->
                 <ion-tab-button tab="tab1">
                     <ion-icon name="bug"></ion-icon>
                     <ion-label>Tab 1</ion-label>
                 </ion-tab-button>
+
+                <!--Botón 2-->
                 <ion-tab-button tab="tab2">
                     <ion-icon name="airplane"></ion-icon>
                     <ion-label>Tab 2</ion-label>
                 </ion-tab-button>
+
             </ion-tab-bar>
+            <!--Fin barra de tabs-->
         </ion-tabs>
+        
     </ion-app>
 </body>
