Cambie los titulos de los tabs

--- a/Practica 2/index.html
+++ b/Practica 2/index.html
@@ -20,13 +20,13 @@
             <!--Tab 1-->
             <ion-tab tab="tab1">
                 <ion-content fullscreen class="ion-padding">
-                    <h1 style="text-align: center">Esta es la primera</h1>
+                    <h1 style="text-align: center">Insectos</h1>
                 </ion-content>
             </ion-tab>
             <!--Tab 2-->
             <ion-tab tab="tab2">
                 <ion-content fullscreen class="ion-padding">
-                    <h1 style="display: block; border-style: dotted; width: 50vw">Esta es la segunda</h1>
+                    <h1 style="display: block; border-style: dotted; width: 50vw">Aviones</h1>
                 </ion-content>
             </ion-tab>
 
