Se agrego una linea al 1er tab

--- a/Practica 2/index.html
+++ b/Practica 2/index.html
@@ -21,6 +21,7 @@
             <ion-tab tab="tab1">
                 <ion-content fullscreen class="ion-padding">
                     <h1 style="text-align: center">Insectos</h1>
+                    <h1 style="text-align: center">Y bugs</h1>
                 </ion-content>
             </ion-tab>
             <!--Tab 2-->
