--- a/Practica 2/index.html
+++ b/Practica 2/index.html
@@ -22,8 +22,12 @@
                 <ion-content fullscreen class="ion-padding">
                     <h1 style="text-align: center">Insectos</h1>
                     <h1 style="text-align: center">Y bugs</h1>
+                    <p style="width: 80vw; margin: 0 auto;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut eaque, reiciendis vitae officiis maxime ullam nobis libero magni ipsum architecto magnam. Ducimus eligendi magni fuga pariatur ipsum at autem dignissimos eius, deserunt maxime quis odio corporis ut iste quia ipsa id vitae quae aliquid voluptatum possimus sunt molestiae. Vitae, rem ad adipisci veniam placeat quisquam tempora id quo, maiores quia voluptatibus nobis mollitia laborum recusandae odit repellat libero omnis non? Minus tenetur deleniti, distinctio laboriosam illo tempora officiis, praesentium atque est unde obcaecati assumenda provident mollitia nisi molestiae perferendis labore. Cupiditate dignissimos quod doloribus obcaecati porro nemo asperiores tempore corrupti! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque, culpa consequatur quos aliquid odio nobis dolores pariatur? Consectetur aperiam delectus quam explicabo quo rerum necessitatibus! Adipisci blanditiis non fuga molestiae ipsa, dolore corrupti quo recusandae assumenda iure excepturi placeat aspernatur nostrum unde debitis consectetur voluptatum, tempore nulla eligendi. Quibusdam, molestiae.</p>
+                    <ion-button>
+                    </ion-button>
                 </ion-content>
             </ion-tab>
+
             <!--Tab 2-->
             <ion-tab tab="tab2">
                 <ion-content fullscreen class="ion-padding">
