--- a/practica1/index.html
+++ b/practica1/index.html
@@ -11,24 +11,30 @@
     <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css" />
 
+    <link rel="stylesheet" href="styles.css">
     <title>Práctica 1</title>
 </head>
 <ion-app>
-    <h1>Este es un título</h1>
-    <h2>Este es otro</h2>
-    <h3>Este es el último</h3>
-    <ion-grid> <!--Inicia grid-->
-        <ion-row> <!--Inicia fila 1-->
-            <ion-col size-sm="12" size-lg = "6"> <!--Inicia columna 1-->
-                columna 1
-                <ion-input placeholder="Escriba su entrada"></ion-input>
-                <ion-button>Enviar</ion-button>
+    <h1>Ionic básico - Práctica 2</h1>
+    <ion-grid>
+        <!--Fila 1-->
+        <ion-row>
+            <ion-col>
+                Columna 1
             </ion-col>
-            <ion-col size-sm="12" size-lg = "6"> <!--Inicia columna 2-->
-                columna 2
-                <input type="Escriba su entrada">
-                <button>Enviar</button>
+            <ion-col>
+                Columna 2
+            </ion-col>
+        </ion-row>
+        <!--Fila 2-->
+        <ion-row>
+            <ion-col>
+                Columna 1
+            </ion-col>
+            <ion-col>
+                Columna 2
             </ion-col>
         </ion-row>
     </ion-grid>
+
 </ion-app>
