--- a/practica1/index.html
+++ b/practica1/index.html
@@ -15,26 +15,29 @@
     <title>Práctica 1</title>
 </head>
 <ion-app>
-    <h1>Ionic básico - Práctica 2</h1>
+    <h1>Ionic Básico - Práctica 2</h1>
+
     <ion-grid>
         <!--Fila 1-->
         <ion-row>
             <ion-col>
-                Columna 1
+                Descripción: 
             </ion-col>
             <ion-col>
-                Columna 2
+                <ion-input placeholder="Ejemplo: Chilaquiles habaneros" id="descripción"></ion-input>
             </ion-col>
         </ion-row>
         <!--Fila 2-->
         <ion-row>
             <ion-col>
-                Columna 1
+                Monto: 
             </ion-col>
             <ion-col>
-                Columna 2
+                <ion-input placeholder="Ejemplo: $80" id="monto"></ion-input>
             </ion-col>
         </ion-row>
+
+        <ion-button>Calcular monto</ion-button>
     </ion-grid>
 
 </ion-app>
