--- a/practica1/index.html
+++ b/practica1/index.html
@@ -15,29 +15,46 @@
     <title>Práctica 1</title>
 </head>
 <ion-app>
+    <div>
     <h1>Ionic Básico - Práctica 2</h1>
-
-    <ion-grid>
-        <!--Fila 1-->
-        <ion-row>
-            <ion-col>
-                Descripción: 
-            </ion-col>
-            <ion-col>
-                <ion-input placeholder="Ejemplo: Chilaquiles habaneros" id="descripción"></ion-input>
-            </ion-col>
-        </ion-row>
-        <!--Fila 2-->
-        <ion-row>
-            <ion-col>
-                Monto: 
-            </ion-col>
-            <ion-col>
-                <ion-input placeholder="Ejemplo: $80" id="monto"></ion-input>
-            </ion-col>
-        </ion-row>
-
-        <ion-button>Calcular monto</ion-button>
-    </ion-grid>
-
+        <ion-grid id="inputgrid">
+            <!--Fila 1-->
+            <ion-row>
+                <ion-col size = 2>
+                    Descripción: 
+                </ion-col>
+                <ion-col size = 10>
+                    <ion-input placeholder="Ejemplo: Chilaquiles habaneros" id="descripcion"> </ion-input>
+                </ion-col>
+            </ion-row>
+            <!--Fila 2-->
+            <ion-row>
+                <ion-col size = 2>
+                    Monto: 
+                </ion-col>
+                <ion-col size = 10>
+                    <ion-input placeholder="Ejemplo: 80" id="monto">$</ion-input>
+                </ion-col>
+            </ion-row>
+            <!--Fila 3-->
+            <ion-row> 
+                <ion-col>
+                    <ion-button onclick="CalcularTotal()">Calcular monto</ion-button>
+                </ion-col>
+            </ion-row>
+        </ion-grid>
+    <!--Lista de objetos-->
+        <ion-content id="contenedorRecibo">
+            <ion-grid id="recibo">
+                <ion-row>
+                    <ion-col size='6' style= "border-color: black;">Descripción</ion-col>
+                    <ion-col size='6' style= "border-color: black;">Costo</ion-col>
+                </ion-row>
+            </ion-grid>
+        </ion-content>
+    <!--Total-->
+        <p id="totalMsg">Total: $0</p>
+    </div>
+<!--Carga script-->
+<script src="index.js"></script>
 </ion-app>
