P1: usado DOM en vez de Texto para App

--- a/practica1/index.html
+++ b/practica1/index.html
@@ -39,7 +39,7 @@
             <!--Fila 3-->
             <ion-row> 
                 <ion-col>
-                    <ion-button onclick="CalcularTotal()" mode="ios">Calcular monto</ion-button>
+                    <ion-button onclick="AgregarEl()" mode="ios">Calcular monto</ion-button>
                 </ion-col>
             </ion-row>
         </ion-grid>
